# TZFinder

./: .gitignore  CMakeLists.txt  README.md  TimeZoneFinder.cc  TimeZoneFinder.h  TimezoneFinder.cc  TimezoneFinder.h  main.cc
scripts/: download.sh  rus_filter.py
src/: TimezoneFinder.cc  TimezoneFinder.h  TimezoneOffsets.h  main.cc
tests/: test_finder.cc
